# multimodal-llm-frontend-generator

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  ui.html
agent-core/: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
agent-core/agents/: __init__.py  base.py  chat_agent.py  code_generator.py  component_detector.py  interaction_infer.py  layout_analyzer.py  text_to_ui.py
agent-core/agents/configs/: chat_agent.yaml  code_generator.yaml  code_validator.yaml  component_detector.yaml  interaction_infer.yaml  layout_analyzer.yaml  text_to_ui.yaml
agent-core/app/: __init__.py  config.py  dependencies.py  main.py  state.py
agent-core/app/routes/: __init__.py  chat.py  echo.py  generate.py
agent-core/checkpoint/: __init__.py  manager.py
agent-core/graph/: __init__.py  generate_workflow.py  state.py
agent-core/llm/: __init__.py  gateway.py
agent-core/llm/prompts/: __init__.py  chat.py  component.py  generator.py  interaction.py  layout.py
agent-core/registry/: __init__.py  agent_registry.py
agent-core/schemas/: __init__.py  chat.py  code.py  common.py  component.py  interaction.py  layout.py
agent-core/tests/: __init__.py  test_agent_registry.py  test_chat_agent.py  test_code_validator.py  test_design_state.py  test_e2e.sh  test_generate_api.py
agent-core/tools/: __init__.py  code_validator.py  html_validator.py  interaction_checker.py
agent-core/utils/: __init__.py  code_extractor.py  image_utils.py
backend/: .env.example  CLAUDE.md  Dockerfile  Makefile  gateway.cov  (+3 more)
(+286 files in other folders)
